# pylabb

./: README.md  pyproject.toml
doc/: MANUAL.md
doc/coverage/: class_index.html  function_index.html  index.html  status.json  z_012716fe7d5dd1db___init___py.html  z_012716fe7d5dd1db_bio_classify_py.html  z_012716fe7d5dd1db_design_py.html  z_012716fe7d5dd1db_pid_py.html  z_012716fe7d5dd1db_stability_py.html  z_012716fe7d5dd1db_verification_py.html  z_0ef629922ad1d82c___init___py.html  z_0ef629922ad1d82c_analysis_widget_py.html  z_0ef629922ad1d82c_codegen_widget_py.html  z_0ef629922ad1d82c_plot_widget_py.html  z_0ef629922ad1d82c_system_editor_py.html  z_32d2b14193f82810___init___py.html  z_32d2b14193f82810_design_py.html  z_32d2b14193f82810_pid_py.html  z_32d2b14193f82810_stability_py.html  z_41a8e61a73ad9ae4___init___py.html  z_41a8e61a73ad9ae4_time_domain_py.html  z_6df1827349390b1c___init___py.html  z_6df1827349390b1c_main_window_py.html  z_6e631062fe966026___init___py.html  z_6e631062fe966026_math_utils_py.html  z_6e631062fe966026_signals_py.html  (+34 more)
doc/pdoc/: index.html  (+2 more)
science/: pylabb.tex
tests/: conftest.py  test_bio_classify.py  test_bio_classify_widget.py  test_codegen.py  test_codegen_extended.py  test_control.py  test_control_design.py  test_core_signals.py  test_core_transfer_function.py  test_gui.py  test_math_utils.py  test_pid_extended.py  test_signals_extended.py  test_simulation.py  test_simulation_extended.py  test_stability_extended.py  test_state_space.py  test_tf_extended.py  test_verification.py  test_verification_widget.py  test_visualization.py
(+39 files in other folders)
