[project]
name = "pylabb"
version = "2.1.0"
description = "Umfassendes Python-Framework für mathematische Berechnungen, Regelungstechnik, Automatisierung und Visualisierung mit MicroPython-Codegenerierung"
authors = [
    {name = "Stephan Epp"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "PyQt6>=6.4.0",
    "PyQt6-Qt6>=6.4.0",
    "subgraph @ git+https://gitlab.com/epp-group/subgraph.git@v1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.2",
    "pylint>=4.0",
    "pdoc>=16.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
pylabb-gui = "pylabb.gui.main_window:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pylabb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html:doc/coverage",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore:.*non-positive xlim.*:UserWarning",
    "ignore:.*not compatible with tight_layout.*:UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    "doc/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
